<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardBackgroundColor="@color/azulClaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textoInfoContraseña"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.098"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.17" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textoInfoContraseña3"
                app:layout_constraintStart_toStartOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textoInfoContraseña5"
                app:layout_constraintStart_toStartOf="@+id/textView29"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textoInfoContraseña6"
                app:layout_constraintStart_toStartOf="@+id/textView30"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textoInfoContraseña7"
                app:layout_constraintStart_toStartOf="@+id/textView31"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textoInfoContraseña2"
                app:layout_constraintStart_toStartOf="@+id/textView26"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textoInfoContraseña8"
                app:layout_constraintStart_toStartOf="@+id/textView32"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textoInfoContraseña4"
                app:layout_constraintStart_toStartOf="@+id/textView28"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>