

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_inicio_registro"
        tools:context="Vista.Fragments.RegistroFragment">

        <!-- TODO: Update blank fragment layout -->

        <EditText
            android:id="@+id/nombreRegistroField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/nombreRegistro"
            android:inputType="text"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailUsuarioSidebar" />

        <EditText
            android:id="@+id/passRegistroField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/contraRegistro"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/nombreRegistroField"
            app:layout_constraintStart_toStartOf="@+id/nombreRegistroField"
            app:layout_constraintTop_toBottomOf="@+id/nombreRegistroField" />

        <EditText
            android:id="@+id/correoRegistroField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/emailRegistro"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/confirmarPassField"
            app:layout_constraintStart_toStartOf="@+id/confirmarPassField"
            app:layout_constraintTop_toBottomOf="@+id/confirmarPassField" />

        <EditText
            android:id="@+id/telefonoRegistroField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/telefonoRegistro"
            android:inputType="phone"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/correoRegistroField"
            app:layout_constraintStart_toStartOf="@+id/correoRegistroField"
            app:layout_constraintTop_toBottomOf="@+id/correoRegistroField" />

        <EditText
            android:id="@+id/confirmarPassField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/contraConfirmacion"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/passRegistroField"
            app:layout_constraintStart_toStartOf="@+id/passRegistroField"
            app:layout_constraintTop_toBottomOf="@+id/passRegistroField" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/botonRegistrar"
            app:backgroundTint="@color/verdeClaro"
            app:layout_constraintEnd_toEndOf="@+id/telefonoRegistroField"
            app:layout_constraintStart_toStartOf="@+id/telefonoRegistroField"
            app:layout_constraintTop_toBottomOf="@+id/telefonoRegistroField" />

        <TextView
            android:id="@+id/emailUsuarioSidebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/ovalo"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/tituloRegistro"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/checkConfirmarPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintBottom_toBottomOf="@+id/confirmarPassField"
            app:layout_constraintEnd_toEndOf="@+id/confirmarPassField"
            app:layout_constraintTop_toTopOf="@+id/confirmarPassField" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fondoConfirmacion"
                android:backgroundTint="@color/moradoClaro">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="90dp"
                    android:src="@drawable/baseline_arrow_forward_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/desliceInicioSesion"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
