<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Vista.ui.slideshow.SlideshowFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:backgroundTint="@color/naranjaSuave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagenEditarUsuario"
                android:layout_width="350px"
                android:layout_height="350px"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_black"
                android:text="@string/tituloEditarUsuario"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/textoDetallesEditarUsuario"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/editarUsuario" />

            <EditText
                android:id="@+id/editarUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/editarCorreo" />

            <EditText
                android:id="@+id/editarCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25px"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/editarPass" />

                <ImageView
                    android:id="@+id/desplegableInfoContrasenia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="25px"
                    android:src="@drawable/baseline_contact_support_24" />
            </LinearLayout>

            <EditText
                android:id="@+id/editarPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/confirmarEditarPass" />

            <EditText
                android:id="@+id/confirmarPassEditada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/editarIban" />

            <EditText
                android:id="@+id/editarIban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:inputType="number" />

            <Button
                android:id="@+id/botonEnviarEdicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/botonEditar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>