<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_inicio_registro"
            tools:context="Vista.InicioSesionFragment">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonInicioSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:clickable="false"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/botonEnviar"
                app:backgroundTint="@color/verdeClaro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passField" />

            <EditText
                android:id="@+id/usuarioField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="176dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/usuarioLabel"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/passField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/passLabel"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/usuarioField"
                app:layout_constraintTop_toBottomOf="@+id/usuarioField" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:background="@drawable/ovalo"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/inicioSesion"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/olvidarContrasenia"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/botonInicioSesion"
                app:layout_constraintTop_toBottomOf="@+id/botonInicioSesion" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/pulseAqui"
                android:textColor="@color/enlaces"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="232dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/botonInicioSesion">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/naranjaSuave"
                    android:backgroundTint="@color/moradoClaro">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="100dp"
                        android:src="@drawable/baseline_arrow_back_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/desliceRegistro"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="41dp"
                android:layout_height="39dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/cardview_shadow_end_color"
                android:src="@drawable/imagebutton"
                app:layout_constraintBottom_toBottomOf="@+id/passField"
                app:layout_constraintEnd_toEndOf="@+id/passField"
                app:layout_constraintTop_toTopOf="@+id/passField" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/bienvenido"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/usuarioField"
                app:layout_constraintStart_toStartOf="@+id/usuarioField"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.823" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
